# Sailtrack

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/sailtrack/: ais_listener.py  api.py
tests/: test_api.py
