[project]
name = "sailtrack"
version = "0.1.0"
description = "AIS-based vessel tracking service"
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Your Name"}]

dependencies = [
    "websockets>=10",
    "aiosqlite>=0.21",
]

[project.scripts]
sailtrack-listener = "sailtrack.ais_listener:main"
