[project]
name = "sailtrack"
version = "0.1.0"
description = "AIS-based vessel tracking service"
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Your Name"}]

dependencies = [
    "websockets>=10",
    "aiosqlite>=0.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
]

[project.scripts]
sailtrack-listener = "sailtrack.ais_listener:main"
sailtrack-api = "sailtrack.api:main"
